data: cron update

--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -133,11 +133,12 @@ series:
       meta_description: 'Wed, Feb 9, 6:00 PM CEST: První letošní sraz Frontendistů - tentokrát na téma testování!
 
 
+        Online stream naleznete na youtube https://www.youtube.com/watch?v=7ipac1_L_8w
+
+
         Program:
 
-        1. Martin Krištof - Heureka
-
-        Jak zrychlit CI/CD a jak poznat, že změna CSS nezpůsobila nežádoucí změ'
+        1. Martin Krištof -'
       og_title: Testování - Frontedisti.cz LIVE | Meetup
       image: https://secure.meetupstatic.com/photos/event/1/2/2/6/600_498544646.jpeg
       url: https://www.meetup.com/frontendisti/events/mbjhpsydcdbmb/
@@ -148,7 +149,7 @@ series:
           Wednesday, February 9 at 6:00 PM
 
 
-          První letošní sraz Frontendistů - tentokrát na téma testování! Program:1. Martin Krištof - HeurekaJak zrychlit CI/CD a jak poznat, že změna CSS nezpůs...
+          První letošní sraz Frontendistů - tentokrát na téma testování! Online stream naleznete na youtube https://www.youtube.com/watch?v=7ipac1_L_8w Program:...
 
 
           https://www.meetup.com/frontendisti/events/283113425/'
