--- a/data/sources/uipath-rpa-prague.yaml
+++ b/data/sources/uipath-rpa-prague.yaml
@@ -1,8 +1,8 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/UiPath-RPA-Prague/
-    meta_description: An online and offline environment where RPA developers or enthusiasts:- meet each other- share about the challenges they encounter, learn together- build projects and components togetherShare your exp
-    og_title: UiPath RPA Prague (Prague, Czech Republic)
+    url: https://www.meetup.com/login/
+    meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+    og_title: Login to Meetup | Meetup
     image: https://secure.meetupstatic.com/photos/event/1/9/4/4/600_496506468.jpeg
   events:
   - meetupcom:
