data: cron update

--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -463,3 +463,30 @@ series:
         url: https://www.meetup.com/asociace-ux/events/283567346/
         dtstart: 2022-02-07 18:30:00+01:00
         dtend: 2022-02-07 20:00:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Feb 3, 7:00 PM CEST: Interested in UX writing? Want to hear from UX writers and designers about how they work together?
+
+
+        Joins for beers 🍻, UX chats 💭, and more! 🔥🚀'
+      og_title: PRAGUE UX WRITERS MEETUP Vol. 25 - February | Meetup
+      url: https://www.meetup.com/asociace-ux/events/283616386/
+      ical:
+        summary: PRAGUE UX WRITERS MEETUP Vol. 25 - February
+        description: 'Asociace UX
+
+          Thursday, February 3 at 7:00 PM
+
+
+          Interested in UX writing? Want to hear from UX writers and designers about how they work together? Joins for beers 🍻, UX chats 💭, and more! 🔥🚀
+
+
+          https://www.meetup.com/asociace-ux/events/283616386/'
+        location: Black Bettie's Grill (Mánesova 7, Vinohrady, Praha-Praha 2, Czech Republic 120 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283616386@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/283616386/
+        dtstart: 2022-02-03 19:00:00+01:00
+        dtend: 2022-02-03 21:00:00+01:00
