data: cron update

--- a/data/sources/applifting-meetup.yaml
+++ b/data/sources/applifting-meetup.yaml
@@ -182,3 +182,27 @@ series:
         url: https://www.meetup.com/Applifting-meetup-1/events/281354506/
         dtstart: 2021-10-26 18:00:00+02:00
         dtend: 2021-10-26 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Feb 15, 6:30 PM CEST: 💡 Do you have an idea for a business but don''t know how to ensure its validity and viability? Want to make sure it has a chance of success? Wondering how to get relevant f'
+      og_title: 'Product Crew Talk: Can your idea become a success? | Meetup'
+      url: https://www.meetup.com/Applifting-meetup-1/events/283625028/
+      ical:
+        summary: 'Product Crew Talk: Can your idea become a success?'
+        description: 'Applifting meetup
+
+          Tuesday, February 15 at 6:30 PM
+
+
+          💡 Do you have an idea for a business but don''t know how to ensure its validity and viability? Want to make sure it has a chance of success? Wondering ...
+
+
+          https://www.meetup.com/Applifting-meetup-1/events/283625028/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283625028@meetup.com
+        url: https://www.meetup.com/Applifting-meetup-1/events/283625028/
+        dtstart: 2022-02-15 18:30:00+01:00
+        dtend: 2022-02-15 20:30:00+01:00
