--- a/data/sources/prague-devops.yaml
+++ b/data/sources/prague-devops.yaml
@@ -181,3 +181,32 @@ series:
         url: https://www.meetup.com/Prague-DevOps-Meetup/events/283152511/
         dtstart: 2022-02-02 19:00:00+01:00
         dtend: 2022-02-02 21:00:00+01:00
+  - meetupcom:
+      meta_description: 'Wed, Mar 9, 7:00 PM CEST: Hello doers,
+
+
+        The sixth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.
+
+        The structure of the session will be one '
+      og_title: Prague DevOps meetup online (March 2022) | Meetup
+      url: https://www.meetup.com/Prague-DevOps-Meetup/events/283816817/
+      ical:
+        summary: Prague DevOps meetup online (March 2022)
+        description: 'Prague DevOps Meetup
+
+          Wednesday, March 9 at 7:00 PM
+
+
+          Hello doers, The sixth online DevOps meetup is here and we are ready to welcome all DevOps enthusiasts, from Prague or elsewhere.The structure of the ...
+
+
+          https://www.meetup.com/Prague-DevOps-Meetup/events/283816817/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283816817@meetup.com
+        url: https://www.meetup.com/Prague-DevOps-Meetup/events/283816817/
+        dtstart: 2022-03-09 19:00:00+01:00
+        dtend: 2022-03-09 21:00:00+01:00
