--- a/data/sources/gdg-ostrava.yaml
+++ b/data/sources/gdg-ostrava.yaml
@@ -123,3 +123,30 @@ series:
         url: https://www.meetup.com/GDG-Ostrava/events/278017552/
         dtstart: 2021-05-18 18:30:00+02:00
         dtend: 2021-05-18 21:00:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Mar 2, 10:00 AM CEST: THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW
+
+
+        https://gdg.community.dev/events/details/google-gdg-ostrava-presents-mezinarodni-tyden-zen-international-w'
+      og_title: Mezinárodní Týden žen (international women's week) | Meetup
+      url: https://www.meetup.com/GDG-Ostrava/events/283915704/
+      ical:
+        summary: Mezinárodní Týden žen (international women's week)
+        description: 'GDG Ostrava
+
+          Wednesday, March 2 at 10:00 AM
+
+
+          THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-mezinarodni...
+
+
+          https://www.meetup.com/GDG-Ostrava/events/283915704/'
+        location: null
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_283915704@meetup.com
+        url: https://www.meetup.com/GDG-Ostrava/events/283915704/
+        dtstart: 2022-03-02 10:00:00+01:00
+        dtend: 2022-03-08 21:00:00+01:00
