data: cron update

--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -186,3 +186,27 @@ series:
         url: https://www.meetup.com/Pure-Storage-Talks/events/282039970/
         dtstart: 2021-12-09 18:00:00+01:00
         dtend: 2021-12-09 19:30:00+01:00
+  - meetupcom:
+      meta_description: 'Thu, Mar 10, 6:00 PM CEST: Doing threat modeling is one of the main requirements for almost any organization. Most of the teams are doing it wrong, and as an award, they receive a false sense of secu'
+      og_title: Agile Visual Threat Modeling (Against a Beer Tap Infrastructure) | Meetup
+      url: https://www.meetup.com/Pure-Storage-Talks/events/283991609/
+      ical:
+        summary: Agile Visual Threat Modeling (Against a Beer Tap Infrastructure)
+        description: 'Pure Storage Talks
+
+          Thursday, March 10 at 6:00 PM
+
+
+          Doing threat modeling is one of the main requirements for almost any organization. Most of the teams are doing it wrong, and as an award, they receive...
+
+
+          https://www.meetup.com/Pure-Storage-Talks/events/283991609/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_283991609@meetup.com
+        url: https://www.meetup.com/Pure-Storage-Talks/events/283991609/
+        dtstart: 2022-03-10 18:00:00+01:00
+        dtend: 2022-03-10 19:30:00+01:00
