data: cron update

--- a/data/sources/praguejs.yaml
+++ b/data/sources/praguejs.yaml
@@ -432,7 +432,7 @@ series:
 
 
           https://www.meetup.com/praguejs/events/267847695/'
-        location: null
+        location: Animika Hub Conference And Meeting Studio (Křižíkova 176/27, Karlín, Praha-Praha 8, Czech Republic 186 00)
         geo:
           lat: 50.08
           lon: 14.43
