data: cron update

--- a/data/sources/applifting-meetup.yaml
+++ b/data/sources/applifting-meetup.yaml
@@ -221,7 +221,7 @@ series:
 
 
           https://www.meetup.com/Applifting-meetup-1/events/283681829/'
-        location: Online event
+        location: Applifting Meetup Space (Rohanské nábřeží, 670/19, Praha, AL\, Czech Republic)
         geo:
           lat: 50.08
           lon: 14.43
